--- a/postgraduate/word/simple-word/markdown/p30-p32.md
+++ b/postgraduate/word/simple-word/markdown/p30-p32.md
@@ -5,177 +5,190 @@
     - a way of pooling assets
 - yours
 - myself
-- covenient
+- convenient
     - adj. 方便的，便利的，近处的
-    - The credit card enables its owner to obtain more convenient services than other people do.
+    - con- 共同
+    - The credit card enables its owner to obtain(获得) more convenient services than other people do.
     - convenience n. 方便
 - postwar
-    - post- 词根： 放置，邮递
-    - 前缀： 向后
-        - postmodern adj. 后现代的
-        - post-high school 高中教育后
-        - post-Brexit world 英国脱欧之后的时间
-            - Brexit （Briton+exit）英国脱欧
     - adj. 战后的
+    - post- 词根： 放置，邮递
+    - 前缀：向后
+        - postmodern adj. 后现代的
+        - post-high school education 高中教育后
+        - post-Brexit world 英国脱欧之后的时间
+            - Brexit (Briton + exit) 英国脱欧
 - rethink
     - v. 重新考虑
-- gradparent
-- grandfather
+- grandparent
+    - grandfather
 - shoulder
     - n. 肩膀； vt. 承担；扛
     - shoulder to shoulder 肩并肩
-        - Two disabled men are ruining shoulder to shoulder.
+        - Two disabled(adj. 残) men are ruining <u>shoulder to shoulder</u>.
     - 承担；扛
-        - To some extent the housing sector must shoulder the balme.
+        - <u>To some extent(在某种程度上)</u> the housing sector must shoulder the blame.
 - freely
     - adv. 不受限制地；自由地
 - shoot
     - vi. 射击，拍摄
     - 射击
-        - They can't see you so they can't shoot you.
+        - They can't see you, so they can't shoot you.
     - 拍摄
         - Photographers are shooting their pictures.
     - shoot - shot - shot
 - reshape
     - v. 重塑
 - tuition
-    - n. 教学，指导；学费
+    - n. 教学，指导；学费 [tuˈɪʃn]
 - subheading
     - n. 副标题，小标题
+    - sub- 在...之下
+    - sur- 在...之上
 - bread
     - n. 面包；生计，谋生之道
-    - bur=br- 烤
+    - bur- == br- 烤，燃烧
     - 生计，谋生之道
-        - They are both bread winners and housewives.
+        - They are both <u>bread winners(赢得面包的人 -> 挣钱养家的人)</u> and housewives.
 - basketball
 - hair
     - n. 头发，毛发
 - camp
-    - n. 野营，营地； vi. 露营
-    - Suppose your university is going to host a summer camp for high school students.
+    - n. 野营，营地； vi. 露营 [kæmp]
+    - Suppose your university is going to host a <u>summer camp</u> for high school students.
         - summer camp 夏令营
 - lag
-    - vi. 拖后腿，走得慢
-    - Graduates from elite universities tend to lag behind the others due to decreased opportunities.
+    - vi. 拖后腿，走得慢 [læɡ]
+    - Graduates from elite(精英) universities tend to lag behind the others <u>due to(由于)</u> decreased opportunities.
     - leg n. 腿
 - loser
 - coal
-    - n. 煤块
+    - n. 煤块 [koʊl]
+    - cold
 - drought
-    - n. 干旱；旱灾
+    - n. 干旱；旱灾 [draʊt]
 - guess
     - v./n. 猜测；推测
 - reorganize
     - v. 重组，整顿
     - organize v. 组织；安排
+        - work -> ork- == org- 和工作有关
 - dirt
     - n. 尘土，污垢；丑闻，丑事
-    - 穿上shirt（衬衫），脱下skirt（裙子），扔进dirt（尘土）
+    - 穿上shirt(衬衫)，脱下skirt(裙子)，扔进dirt(尘土)
 - shall
-    - v. 将会，将要=will；必须，应该
+    - v. 将会，将要(== will)；必须，应该
     - 将会，将要（只能第一人称）
-        - I shall define him as an individual. 
+        - I shall define him as an individual.
     - 应该
-        - I will be your God and you shall be my peop.
+        - I will be your God and you shall be my people.
 - chew
-    - v. 咀嚼，嚼碎
+    - v. 咀嚼，嚼碎 [tʃuː]
 - trillion
     - num. 万亿；兆
     - billion 十亿
     - million 百万
+    - 1(trillion),000(billion),000(million),000(thousand),000
 - terrible
     - adj. 极度的；可怕的；**糟糕的**
-    - A clean copy fresh offa printer may look terrible.
+    - A clean copy <u>fresh off(刚刚完成/出炉)</u> a printer may look terrible.
     - terri- 恐怖
         - terror n. 恐怖；可怕的人；恐怖的事
         - terrorist n. 恐怖分子
+            - -ist ...的人，专业的人
         - terrorism n. 恐怖主义
+            - -ism ...主义
 - pound
-    - n. 磅（重量）；英镑； v.  猛烈敲击
+    - n. 磅（重量）；英镑； v. 猛烈敲击
     - pend- 悬挂；花销
 - nasty
     - adj. 令人讨厌的；险恶的；下流的
 - gold
     - n. 黄金；金色；adj. 金质的；金色的
     - gold rush 淘金热
-    - golden adj. 金色的；金制是
+    - golden adj. 金色的；金制的
 - shore
-    - n. 海滨； vt. 支持，支撑（shore up）
-    - The government used subsidies to shore （up）farm prices.
+    - n. 海滨； vt. 支持，支撑(shore up)
+    - The government used subsidies(津贴) to <u>shore (up)</u> farm prices.
+    - share
 - funny
     - adj. 滑稽的；稀奇的；可笑的，稍感不适的
 - bury
-    - vt. 掩藏，掩埋
-    - Archaeologists also may locate buried remains by using technologies.
+    - vt. 掩藏，掩埋 [ˈberi]
+    - bur- == br- 燃烧
+    - Archaeologists(考古学家) also may locate(定位) buried remains by using technologies.
 - cucumber
-    - n. 黄瓜
+    - n. 黄瓜 [ˈkjuːkʌmbər]
 - suburb
     - n. 市郊；郊区
+    - urban
 - enemy
-    - n. 敌人；敌国
-    - They can identify friends to cooperate with and enemies to avoid.
+    - n. 敌人；敌国 [ˈenəmi]
+    - They can identify(辨认) friends to cooperate with and enemies to avoid. 他们能够辨认出可以合作的朋友，以及需要回避的敌人
 - gate
     - n. 大门；入口；登机口
 - nobody
 - skip
     - n./vi. 跳，蹦跳；跳过
     - Students can easily skip half their homework.
+    - ship n. 船
 - pollute
     - vt. 污染，弄脏
-    - Some of the contents of this gas pollute the atmosphere.
+    - Some of the contents of this gas pollute the atmosphere(大气层).
     - pollution n. 污染物
-- chairtable
+- charitable
     - adj. 慈善事业的；慈善团体的
     - charity n. 慈善事业
-        - Buying gifts or giving to charity is often more pleasurable than purchasing things for oneself.
+        - care- 关心
+        - Buying gifts or giving to charity is often more pleasurable than purchasing(购买) things for oneself.
 - fossil
-    - n. **化石**；老顽固
-    - The fossil record shows that many species have endured for millions of years.
+    - n. **化石**；老顽固 [ˈfɑːsl]
+    - pos- == fos- 放置
+    - The fossil record shows that many species(物种) have endured(持续存在/忍受/经受住) for millions of years.
 - float
     - flow + boat
     - v. 浮动，漂浮
-    - ...smells which float through the
-    air.
+    - ...smells which float through the air.
 - shrink
     - vi. **收缩；退缩**；畏缩；起皱； vi. 使起皱
-    - The price rise of crude leads to theshrinking of heavy industry.
+    - The price rise of crude(原油) leads to the shrinking of heavy industry.
 - movie
     - n. 电影
     - the movies 电影院
 - politically
     - adv. 政治上
     - policy n. 政策
-    - polics n.政治
     - political adj. 政治的
 - sick
-    - adj. 患病的；想吐的；腻烦的；厌恶的（sick of）
+    - adj. 患病的；想吐的；腻烦的；厌恶的(sick of)
     - 生病的
-        - A warm embrace （拥抱）might even help you avoid getting sick this winter.
+        - A warm embrace(拥抱 == hug) might even help you avoid getting sick this winter.
 - circle
-    - circ- 圈；环
-        - circuit 巡回审判
-        - circular 圆圈的，环的
     - n. 圆圈；**圈子，界**；vt. 围绕，环绕
-    - You may have a circle of frends...
+    - circ- 圈；环
+        - circuit v. 巡回审判
+        - circular adj. 圆圈的，环的
+    - You may have a circle of friends...
 - whenever
     - conj. 无论何时，**每当**
-    - Whenever I recite words，I will think of my vocabulary teacher.
+    - Whenever I recite(背诵) words，I will think of my vocabulary teacher.
 - perfectly
     - adv. 完全地，十分
 - grocery
-    - n. 食品杂货店
+    - n. 食品杂货店 [ˈɡroʊsəri]
 - creature
-    - n. 生物，人，动物
+    - n. 生物，人，动物 [ˈkriːtʃər]
     - They are good-natured，cooperative creatures.
     - create v. 创造，产生
-    - cre- 产生
+        - cre- 产生
 - lucky
     - adj. 幸运的
     - lucky dog 幸运儿
     - luck n. 运气；好运
-    - lock 锁
+    - lock v. 锁
 - personnel
-    - n. 人员，员工；人事部门
+    - n. 人员，**员工**；人事部门
+    - ~~a/an personnel~~
 - servant
     - n. 仆人
     - serv- 服务，保留
@@ -183,11 +196,11 @@
     - adj. 活着的；存在的；有活力的
     - ...stay alive，but have fewer children.
 - square
-    - n. **广场；平方**；正方形；adj. **平方的**；直角的
-    - 平方
-        - BMI equals body mass divided by the square of height.
+    - n. **广场；平方**；正方形；adj. **平方的**；直角的 [skwer]
     - quar- 四
-    - quarter 四分之一
+        - quarter 四分之一
+    - 平方
+        - BMI equals <u>body mass(体重)</u> <u>divided by(除以)</u> the square of height.
 - fifth
 - honest
     - adj. 诚信的，正直的
@@ -197,17 +210,16 @@
 - poll
     - n. 民意测验；选举投票
 - youth
-    - n. 青春，青少年时代（不可数）；青年（可数）
+    - n. 青春，青少年时代(不可数)；青年(可数) [juːθ]
     - lead more youths into criminal behavior
     - young adj. 年轻的
 - ride
     - v. 骑车，骑马；n. 骑马旅行；搭便车；乘车旅行
     - 骑车，骑马
-        - Princes and princesses have day-jobs and ride bicycles，not horses.
-    - 乘车旅行
-        - She took some friends for a ride in the family car.
+        - Princes(王子) and princesses(公主) have day-jobs and ride bicycles，not horses(马匹).
+    - She took some friends for a ride in the family car.
 - pause
-    - vi./n. 暂停，中止
+    - vi./n. 暂停，中止 [pɔːz]
 - soft
     - adj. 软的；柔软的；轻柔的；柔和的；温和的；不含酒精的
     - soft passage 轻柔的乐章
@@ -227,42 +239,48 @@
     - 眼泪
         - They become sad when the tears begin to flow.
 - tobacco
-    - n. 烟草，烟叶
+    - n. 烟草，烟叶 [təˈbækoʊ]
 - thesis
+    - n. 论文；论题 (pl. theses) [ˈθiːsɪs]
     - theme + analysis
-    - n. 论文；论题 （pl. theses）
 - bother
     - vt. 打扰；使不安
     - This has long bothered Policymakers in poor countries.
-    - brother
+    - brother n. 兄弟
 - brown
     - adj. 棕色的，褐色的； n. 褐色
+    - br- == bur- 燃烧
 - depict
-    - vt. 描绘，描写，描述
-    - as It depicts in the chart/ picture...
+    - vt. 描绘，描写，描述 [dɪˈpɪkt]
+    - de 前缀 向下
+    - pic- 描绘
+        - picture
+    - as it depicts in the chart/picture...
 - runner
 - lane
     - n. 小路，车道
 - puritan
-    - n. 禁欲者；苦行憎；**清教徒**
+    - n. 禁欲者；苦行憎；**清教徒** [ˈpjʊrɪtən]
 - floor
-    - n. 地板，地面（屋内）
-    - ground 地面（室外）
+    - n. 地板，地面
+    - 地面 floor vs ground
+        - floor 屋内地面
+        - ground 室外地面
 - timer
     - n. 计时器；定时器；时计
 - coffee
 - basically
     - adv. 大体上；基本上
-    - Basically， the individual at this age loses childhood privileges.
-    - **base** n. 基础，底部； v. 把...基于（base on）
+    - Basically, the individual(个人) at this age loses childhood privileges(特权).
+    - **base** n. 基础，底部； v. 把...基于(base on)
     - basic adj. 基本的，基础的
 - poet
-    - n. 诗人
+    - n. 诗人 [ˈpoʊət]
     - poetry n. 诗歌
     - poetic adj. 诗歌的
 - hunter
     - n. 猎人；狩猎者
-    - headhunter n. 猎头
+    - **headhunter** n. 猎头
     - hurt v./n. 受伤
     - hunt v. 打猎
 - tap
@@ -271,8 +289,8 @@
         - tap resources 开采资源
         - tapped intuition and creativity 开发本能和创造力
 - breath
-    - n. 气息，呼吸的空气；（不可数） 呼吸（可数）
-    - Deep breaths can help，as can speaking more slowly and deliberately.
+    - n. 气息，呼吸的空气；(不可数) 呼吸(可数)
+    - Deep breaths can help，as can speaking more slowly and deliberately(故意地).
     - breathe v. 呼吸，吸入
 - rent
     - vt. 租借，租用；出租 n. 租金
@@ -284,33 +302,35 @@
     - chew gum 嚼口香糖
 - thereby
     - adv. 因此，从而
-    - **therefore** 因此
-    - 区别：
-        - thereby位于and后面引导doing；或者位于句尾
+    - 因此 thereby vs **therefore**
+        - thereby 位于 and 后面引导 doing；或者位于句尾
             - ...the public and thereby threatening...
-        - therefore位于句首或者位于谓语动词附近
-            - His analysis should therefore end any self-contentedness
-            - Therefore，it is important to study humans.
+        - therefore 位于句首或者位于谓语动词附近
+            - His analysis should therefore end any self-contentedness(指“对自己太满意、安于现状”的心态 -> 自满、自得).
+            - Therefore, it is important to study humans.
 - ladder
-    - n. 梯子；阶梯；途径
-    - Japanese education is praised for helping the young climb the social ladder.
+    - n. 梯子；阶梯；途径 [ˈlædər]
+    - Japanese education is praised(称赞) for helping the young climb the social ladder.
     - stairs 楼梯
-    - escalator 电梯
-    - lift（英）/elevator（美）直梯
+    - lift(英)/elevator(美) 直梯
+        - lift -> loft
 - monthly
 - clue
-    - n. 线索，提示
+    - n. 线索，提示 [kluː]
     - These offer clues to the careers that will fit them best
 - questionable
     - adj. 可疑的；有问题的；未必准确的
     - question n. 问题； v. 提问
 - foresee
-    - vt. 预见，预料，预知
+    - vt. 预见，预料，预知 [fɔːrˈsiː]
+    - fore- 在...之前
     - forecast n./v. 预测，预料
+        - cast- 投掷，扔
     - predict v. 预测
     - anticipate v. 预测，预料
 - alike
     - adj./adv. 同样的，相像的
+    - a == on
         - My sister and I do not look like.
     - like prep. 像
         - Much of our social life is like that.
@@ -319,54 +339,59 @@
 - cheat
     - vt. 欺骗； vi. 行骗；作弊； n. 舞弊
     - 作弊
-        - You can win by cheating as long as you don't get caught.
+        - You can win by cheating <u>as long as(只要)</u> you don't get caught.
 - dig
-    - vt. 挖，掘； vi.挖掘；搜寻，寻找（dig for/into）
-    - Ground surveys allow archaeologists to pinpoint the places where digs will be successful.
+    - vt. 挖，掘； vi.挖掘；搜寻，寻找(dig for/into 搜寻)
+    - Ground surveys(调查) allow archaeologists(考古学家) to pinpoint(查明) the places where digs will be successful.
+      地面调查使考古学家能够查明哪些地点的挖掘会成功 -> 通过地面调查，考古学家能够精确确定哪些地方适合成功挖掘
 - shout
     - v./n. 呼喊，喊叫
     - shoot vi./vt. 射击
 - length
 - violence
-    - viol- 暴力；
-    - n. 暴力；猛烈
+    - n. 暴力；猛烈 [ˈvaɪələns]
+    - viol- 暴力
+        - violent adj. 暴力的；猛烈的
+        - violate v. 违背；冒犯
+            - California's argument(论点，观点) violates principles(原则) of the Constitution(宪法).
     - physical violence 身体暴力
     - school violence 校园暴力
-    - violent adj. 暴力的；猛烈的
-    - violate v. 违背；冒犯
-        - California's argument violates principles of the Constitution.
 - keen
-    - adj. 热心的（keen on）；渴望的；敏锐的，激烈的
+    - adj. 热心的(keen on)；渴望的；敏锐的，激烈的
+    - ee 表示眼睛
+        - deep
+        - deem
     - be keen on 热衷于
-        - He is keen on learning anything new.
+        - He <u>is keen on</u> learning anything new.
     - be keen to 渴望做某事，极想做某事
-        - Lawyers were keen to attend conventions.
+        - Lawyers <u>were keen to</u> attend conventions.
 - blue
     - adj. 蓝色的；忧郁的
-- Policymaker
+- policymaker
     - n. 政策制定者
 - robotic
     - adj. 机器人的
+    - rob- 力量
     - robot n. 机器人
     - robust adj. 强壮的；耐用的，结实的
 - loan
-    - n. 贷款；借，贷款
+    - n. 贷款；借，贷款 [loʊn]
     - housing loans 住房贷款
 - garment
-    - n. 服装（pl.）；一件衣服
-    - People are more interested in unaffordable garments.
+    - n. 服装(pl.)；一件衣服
+    - People are more interested in unaffordable(负担不起) garments.
 - silent
     - adj. 安静的；沉默的；无声的
     - silence n. 安静；沉默； vt. 使安静
     - silently adv. 默默地；不说话地
 - neighborhood
     - n. 四邻，街坊；临近地区，附近
-        - in the neighbohood of schools
+        - in the neighborhood of schools
     - neighbor/neighbour n. 邻居；邻近的人；邻国
         - their older neighbors
 - village
-    - n. 乡村；（the village）乡村居民
-    - illness n. 疾病
+    - n. 乡村；(the village)乡村居民 [ˈvɪlɪdʒ]
+- illness n. 疾病
 - click
     - v. 敲击，点击
     - By watching what people search for，click on and say online，companies can aim "behavioral" ads at those most likely to buy.
@@ -377,12 +402,12 @@
 - joke
     - n. 笑话，玩笑
 - ceiling
-    - n. 天花板；最高限度，最高限额
-    - glass ceiling 女性在职场中受到的不公平的待遇
-        - They open the way to equality and they break through the glass ceiling.
+    - n. 天花板；最高限度，最高限额 [ˈsiːlɪŋ]
+    - glass ceiling 狭义：女性在职场中受到的不公平的待遇 -> 广义：指所有弱势群体面临的“看不见的职业发展障碍”
+        - They open the way to equality and they break through the glass ceiling. 
 - manpower
     - n. 劳动力；人力
-- taster
+- tester
     - n. 测试员；实验员测试仪
 - desk
     - n. 书桌，办公桌
